fixed styles and star on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -86,9 +86,13 @@ body {
 
 .main {
   position: relative;
-  top: 40px;
+  top: 45px;
   z-index: 2;
   padding-left: 5px;
+
+  @media screen and (width <=768px) {
+    top: 40px;
+  }
 }
 
 #cursor-container {
@@ -273,6 +277,10 @@ a {
   top: 46%;
   left: 50%;
   transform: translate(-50%, -50%);
+
+  @media screen and (width <=768px) {
+    left: 26%;
+  }
 }
 
 .star-text {
