--- a/app/styles/projectNav.module.css
+++ b/app/styles/projectNav.module.css
@@ -107,7 +107,7 @@
   bottom: -14px;
 }
 
-@media (width < 768px) {
+@media (width <=768px) {
   .mobileListDiv {
     display: flex;
   }
